<package>
  <name>teleop_view</name>
  <version>0.1</version>
  <description>
  A simple viewer for ROS image topics.  Based on image_view by Vincent Rabaud
  </description>
  <author>Paul Milliken</author>
  <maintainer email="paul.milliken@gmail.com">Paul Milliken</maintainer>
  <license>BSD</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
  
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>

  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
